--- a/app/views/roles/_roles.html.erb
+++ b/app/views/roles/_roles.html.erb
@@ -9,8 +9,9 @@
         <h3 class="lead color-dark">
           <table>
             <tbody>
-            <td width="200px">Como <strong><%= roles.name %>,</strong></td>
-            <td width="100%" class="p-l-30">gostaria de no futuro <strong><%= roles.description %></strong></td>
+              <td width="100%">
+                Como <strong><%= roles.name %></strong>, gostaria de no futuro <strong><%= roles.description %></strong>
+              </td>
             </tbody>
           </table>
         </h3>
