--- a/app/views/goals/_cardgoal.erb
+++ b/app/views/goals/_cardgoal.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-border">
-    <div class="card">
+    <div class="card" style="padding-left: 0;">
       <div class="card-body">
         <div class="padding-all">
           <div class="goal-description">
