Disabling spheres progress

--- a/app/views/plans/inicio.html.erb
+++ b/app/views/plans/inicio.html.erb
@@ -4,7 +4,9 @@
   </div>
 </div>
 
-<section id="sphere-status">
+<%
+=begin%>
+ <section id="sphere-status">
   <div class="container p-b-50">
     <div class="row">
       <div class="col-md-12">
@@ -30,7 +32,9 @@
       <% end %>
     </div>
   </div>
-</section>
+</section> 
+<%
+=end%>
 
 <section id="progress">
   <div class="container p-b-50">
