--- a/app/views/plans/pdf.html.erb
+++ b/app/views/plans/pdf.html.erb
@@ -218,7 +218,7 @@
         <h3>Âmbitos </h3>
         <hr/>
         <% @spheres.each do |sphere| %>
-          <p><%= sphere.name %>. <%= sphere.progress %> concluído.</p>
+          <p><%= sphere.name %>.</p>
         <% end %>
       </div>
       <br/>
